<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">TT-Downloaded has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="app_name">TT-Downloaded</string>
    <string name="action_settings">Settings</string>
    <string name="searchTextSummit">Suchtext für die Gipfel: </string>
    <string name="lblGebiet">Gebiet: </string>
    <string name="strAnzahlDerWege">Anzahl der Wege: </string>
    <string name="strAnzahlDerSternchenWege">Anzahl der *-Wege: </string>
    <string name="strSearchSummit">Gipfel suchen</string>
    <string name="strResetSummitSearch">Zurück setzen</string>
    <string name="title_activity_summits_found">SummitsFoundActivity</string>
    <string name="strCordinates">GPS-Koordinaten: </string>
    <string name="tableColSummitNumberOfficial">Gipfelnummer (KleFü): </string>
    <string name="tableCol_Area">Gebiet: </string>
    <string name="tableCol_SummitName">"Gipfel: "</string>
    <string name="tableCol_RouteName">"Weg: "</string>
    <string name="tableCol_NumberOfRoutes">Anzahl der Wege: </string>
    <string name="tableCol_NumberofStarRoutes">Anzahl der *-Wege: </string>
    <string name="tableCol_EasiestGrade">leichtester Weg: </string>
    <string name="tableCol_Gps">"GPS: "</string>
    <string name="tableCol_IsAscended">"Bestiegen, am: "</string>
    <string name="tableCol_MyComment">"Eigener Kommentar: "</string>
    <string name="tableCol_MeanGrade">"Mittlere Wegbewertung: "</string>
    <string name="tableCol_NumberOfComments">""Anzahl der Kommentare: "</string>
    <string name="tableCol_RouteIsAscended">"Geklettert: "</string>
    <string name="strGpcCoords">"GPS und Karte"</string>
    <string name="strNeighbourSummit">"Nachbargipfel:"</string>
    <!-- <string name="strSave">Speichern</string>  -->
    <string name="tableColStrUser">"Benutzer: "</string>
    <string name="tableCol_DateOfComment">Kommentardatum: "</string>
    <string name="tableCol_UserGrade">"Bewertung: "</string>
    <string name="tableCol_Comment">&lt;--Kommentar --&gt;</string>
    <string name="INFO">App Info</string>
    <string name="APP_INFO_TEXT">Von Martin Vennekamp\n(vennekamp(at)googlemail.com)\nmit Daten aus\n\'www.teufelsturm.de\' (Nur private Nutzung!)\n\'www.openstreetmap.de\' (via mapsforge)</string>
    <string name="BACKUP_DATA">Export Backup Datei </string>
    <string name="IMPORT_DATA">Import Backup Datei</string>
    <string name="INFO_TEXT_DB_IMPORT">Alle vorhandenen Daten werden gelöscht!\n\nSind Sie sicher?</string>
    <string name="YES">"Ja, ich weiss was ich mache."</string>
    <string name="searchTextRoute">Suchtext für einen Weg:</string>
    <string name="strLimitForScale">"Schwierigkeits-Skala: "</string>
    <string name="strNumberOfComments">"Anzahl Kommentare > "</string>
    <string name="strMinOfMeanRating">"Ø der Wegbewertung > "</string>
    <string name="strSearchRoute">Wege suchen</string>
    <string name="searchTextComment">Suchtext für einen Kommentar:</string>
    <string name="strMinGradingInComment">"Mindest Wegbewertung im Kommentar"</string>
    <string name="strSearchComment">"Kommentar suchen"</string>
    <string name="strAll">"Alle"</string>
    <string name="gps_disabled_message">""GPS ist ausgeschaltet.\nSoll es aktiviert werden?"</string>
  	<string name="YES_ONLY">Ja</string>
    <string name="NO_ONLY">Nein</string>
    <string name="arrow">Arrow</string>
    <string name="strToDay">Heute</string>
    <string name="strNoDay">Kein Datum</string>
    <string name="strChooseDate">"Datum"</string>
    <!-- MAPSFORGE Strings -->
    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>

    </resources>