<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:gravity="center_horizontal"
    android:paddingBottom="5dp"
    android:weightSum="1.0" >

    <RelativeLayout
        android:id="@+id/routes_lv_item_found"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".97"
        android:background="@color/Black"
        android:gravity="left|right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_tableCol_RouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="1dp"
            android:background="@color/Blue"
            android:focusable="false"
            android:text="@string/tableCol_RouteName"
            android:textColor="@color/White"
            android:textSize="@dimen/lv_header" />

        <TextView
            android:id="@+id/textView_tableCol_SummitName2Route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_tableCol_RouteName"
            android:layout_margin="1dp"
            android:background="@color/Blue"
            android:drawableRight="@drawable/grey_arrow"
            android:focusable="false"
            android:text="@string/tableCol_SummitName"
            android:textColor="@color/White"
            android:textSize="@dimen/lv_item" />

        <TextView
            android:id="@+id/textView_tableCol_NumberOfComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_tableCol_SummitName2Route"
            android:layout_margin="1dp"
            android:background="@color/Blue"
            android:focusable="false"
            android:text="@string/tableCol_NumberOfComments"
            android:textColor="@color/White"
            android:textSize="@dimen/lv_item" />

        <TextView
            android:id="@+id/textView_tableCol_MeanGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_tableCol_NumberOfComments"
            android:layout_margin="1dp"
            android:background="@color/Blue"
            android:focusable="false"
            android:text="@string/tableCol_MeanGrade"
            android:textColor="@color/White"
            android:textSize="@dimen/lv_item" />

        <LinearLayout
            android:id="@+id/RouteAscendDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView_tableCol_MeanGrade"
            android:gravity="center_horizontal"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/CheckBoxRouteAsscended_in_lv"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight=".6"
                android:background="@color/Blue"
                android:text="@string/tableCol_RouteIsAscended"
                android:textColor="@color/White"
                android:textSize="@dimen/lv_item" />

            <!-- android:button="@drawable/checkbox_selector" -->
            <!-- android:enabled="false" -->
            <!-- android:focusable="false" -->

            <TextView
                android:id="@+id/textView_tableCol_DateAsscended"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight=".4"
                android:background="@color/Blue"
                android:focusable="false"
                android:text=""
                android:textColor="@color/White"
                android:textSize="@dimen/lv_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_tableCol_MyComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/RouteAscendDetails"
            android:layout_margin="1dp"
            android:background="@color/Blue"
            android:focusable="false"
            android:text="@string/tableCol_MyComment"
            android:textColor="@color/White"
            android:textSize="@dimen/lv_item" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageViewArrow"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight=".03"
        android:contentDescription="@string/arrow"
        android:maxWidth="@dimen/activity_vertical_margin"
        android:scaleType="fitXY"
        android:src="@drawable/grey_arrow_large" />

</LinearLayout>